--- a/Shopify/Shopify.ipynb
+++ b/Shopify/Shopify.ipynb
@@ -282,11 +282,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A better metric would be median and its value is 284"
+   ]
   },
   {
    "cell_type": "markdown",
